--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -14,8 +14,8 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-card>
-    <ion-card-header>
+  <ion-card color="lightgrey">
+    <ion-card-header color="dark">
       About The Application
     </ion-card-header>
     <ion-card-content>
