--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -13,6 +13,14 @@
   <p>
    Maintain your record in one touch
   </p>
-
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="update-button">
+  <button ion-button round item-center>Update Record</button>
+  </div>
   <!-- <button ion-button secondary menuToggle>Toggle Menu</button> -->
 </ion-content>
