--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,7 +20,7 @@
   <br>
   <br>
   <div class="update-button">
-  <button ion-button round item-center>Update Record</button>
+  <!-- <button ion-button round item-center>Update Record</button> -->
   </div>
   <!-- <button ion-button secondary menuToggle>Toggle Menu</button> -->
 </ion-content>
